[gd_scene load_steps=37 format=2]

[ext_resource path="res://Veri/Kodlar/Value.gd" type="Script" id=1]
[ext_resource path="res://Veri/Resimler/Asker.png" type="Texture" id=2]
[ext_resource path="res://Veri/Kodlar/DUSMAN ASKER.gd" type="Script" id=3]
[ext_resource path="res://Veri/Yazi Tipi/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Veri/Resimler/ATES.png" type="Texture" id=5]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

void fragment()
{
	vec4 color = texture(TEXTURE, UV);
	
	COLOR = vec4(color.r,color.b,color.b,color.a);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 44, 40 )

[sub_resource type="CircleShape2D" id=6]
radius = 37.9473

[sub_resource type="CircleShape2D" id=7]
radius = 32.0

[sub_resource type="Animation" id=8]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=20]
radius = 32.0

[sub_resource type="Animation" id=21]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=26]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=30]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "A"
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=32]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="DUSMAN ASKER" type="KinematicBody2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 5 )
margin_left = -48.0
margin_top = -48.0
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 2 )
expand = true

[node name="ProgressBar" type="Label" parent="."]
margin_left = -64.0
margin_top = -96.0
margin_right = 64.0
margin_bottom = -64.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4, 0 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Node2D"]
position = Vector2( 0, 172 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
shape = SubResource( 7 )

[node name="Area2D2" type="Area2D" parent="Node2D"]
position = Vector2( 148, 84 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D2"]
shape = SubResource( 7 )

[node name="Area2D3" type="Area2D" parent="Node2D"]
position = Vector2( 148, -88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D3"]
shape = SubResource( 7 )

[node name="Area2D4" type="Area2D" parent="Node2D"]
position = Vector2( 0, -172 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D4"]
shape = SubResource( 7 )

[node name="Area2D5" type="Area2D" parent="Node2D"]
position = Vector2( -148, -88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D5"]
shape = SubResource( 7 )

[node name="Area2D6" type="Area2D" parent="Node2D"]
position = Vector2( -148, 84 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D6"]
shape = SubResource( 7 )

[node name="Node2D4" type="Node2D" parent="."]
visible = false

[node name="KinematicBody2D" type="KinematicBody2D" parent="Node2D4" groups=["Düşman 2"]]
visible = false
position = Vector2( 0, 172 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D"]
shape = SubResource( 7 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="Node2D4" groups=["Düşman 2"]]
visible = false
position = Vector2( 148, 84 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D2"]
shape = SubResource( 7 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D2"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D2"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 10 )
anims/RESET = SubResource( 11 )

[node name="KinematicBody2D3" type="KinematicBody2D" parent="Node2D4" groups=["Düşman 2"]]
visible = false
position = Vector2( 148, -88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D3"]
shape = SubResource( 7 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D3"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D3"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="KinematicBody2D4" type="KinematicBody2D" parent="Node2D4" groups=["Düşman 2"]]
visible = false
position = Vector2( 0, -172 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D4"]
shape = SubResource( 7 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D4"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D4"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 14 )
anims/RESET = SubResource( 15 )

[node name="KinematicBody2D5" type="KinematicBody2D" parent="Node2D4" groups=["Düşman 2"]]
visible = false
position = Vector2( -148, -88 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D5"]
shape = SubResource( 7 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D5"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D5"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 16 )
anims/RESET = SubResource( 17 )

[node name="KinematicBody2D6" type="KinematicBody2D" parent="Node2D4" groups=["Düşman 2"]]
visible = false
position = Vector2( -148, 84 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D4/KinematicBody2D6"]
shape = SubResource( 7 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D4/KinematicBody2D6"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D4/KinematicBody2D6"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 18 )
anims/RESET = SubResource( 19 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
autostart = true

[node name="Timer3" type="Timer" parent="."]
autostart = true

[node name="Timer4" type="Timer" parent="."]
autostart = true

[node name="Timer5" type="Timer" parent="."]
autostart = true

[node name="Timer6" type="Timer" parent="."]
autostart = true

[node name="Timerr" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Node2D2" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Node2D2"]
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 8

[node name="RayCast2D2" type="RayCast2D" parent="Node2D2"]
rotation = -1.0472
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 8

[node name="RayCast2D3" type="RayCast2D" parent="Node2D2"]
rotation = -2.09439
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 8

[node name="RayCast2D4" type="RayCast2D" parent="Node2D2"]
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 8

[node name="RayCast2D5" type="RayCast2D" parent="Node2D2"]
rotation = -4.18878
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 8

[node name="RayCast2D6" type="RayCast2D" parent="Node2D2"]
rotation = -5.23598
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 8

[node name="Node2D6" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Node2D6"]
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 4

[node name="RayCast2D2" type="RayCast2D" parent="Node2D6"]
rotation = -1.0472
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 4

[node name="RayCast2D3" type="RayCast2D" parent="Node2D6"]
rotation = -2.09439
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 4

[node name="RayCast2D4" type="RayCast2D" parent="Node2D6"]
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 4

[node name="RayCast2D5" type="RayCast2D" parent="Node2D6"]
rotation = -4.18878
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 4

[node name="RayCast2D6" type="RayCast2D" parent="Node2D6"]
rotation = -5.23598
enabled = true
cast_to = Vector2( 0, 156 )
collision_mask = 4

[node name="Node2D5" type="Node2D" parent="."]

[node name="KinematicBody2D" type="KinematicBody2D" parent="Node2D5" groups=["Düşman 2"]]
visible = false
position = Vector2( 0, 128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D5/KinematicBody2D"]
shape = SubResource( 20 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D5/KinematicBody2D"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D5/KinematicBody2D"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 21 )
anims/RESET = SubResource( 22 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="Node2D5" groups=["Düşman 2"]]
visible = false
position = Vector2( 128, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D5/KinematicBody2D2"]
shape = SubResource( 20 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D5/KinematicBody2D2"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D5/KinematicBody2D2"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="KinematicBody2D3" type="KinematicBody2D" parent="Node2D5" groups=["Düşman 2"]]
visible = false
position = Vector2( 128, -64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D5/KinematicBody2D3"]
shape = SubResource( 20 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D5/KinematicBody2D3"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D5/KinematicBody2D3"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 25 )
anims/RESET = SubResource( 26 )

[node name="KinematicBody2D4" type="KinematicBody2D" parent="Node2D5" groups=["Düşman 2"]]
visible = false
position = Vector2( 0, -128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D5/KinematicBody2D4"]
shape = SubResource( 20 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D5/KinematicBody2D4"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D5/KinematicBody2D4"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 27 )
anims/RESET = SubResource( 28 )

[node name="KinematicBody2D5" type="KinematicBody2D" parent="Node2D5" groups=["Düşman 2"]]
visible = false
position = Vector2( -128, -64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D5/KinematicBody2D5"]
shape = SubResource( 20 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D5/KinematicBody2D5"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D5/KinematicBody2D5"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 29 )
anims/RESET = SubResource( 30 )

[node name="KinematicBody2D6" type="KinematicBody2D" parent="Node2D5" groups=["Düşman 2"]]
visible = false
position = Vector2( -128, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D5/KinematicBody2D6"]
shape = SubResource( 20 )
disabled = true

[node name="TextureRect" type="TextureRect" parent="Node2D5/KinematicBody2D6"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D5/KinematicBody2D6"]
root_node = NodePath("../TextureRect")
anims/A = SubResource( 31 )
anims/RESET = SubResource( 32 )

[node name="Node2D3" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Node2D3"]
position = Vector2( 0, 172 )

[node name="Position2D2" type="Position2D" parent="Node2D3"]
position = Vector2( 148, 84 )

[node name="Position2D3" type="Position2D" parent="Node2D3"]
position = Vector2( 148, -84 )

[node name="Position2D4" type="Position2D" parent="Node2D3"]
position = Vector2( 0, -172 )

[node name="Position2D5" type="Position2D" parent="Node2D3"]
position = Vector2( -148, -84 )

[node name="Position2D6" type="Position2D" parent="Node2D3"]
position = Vector2( -148, 84 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=["Düşman"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D2222_body_entered"]
[connection signal="body_entered" from="Node2D/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Node2D/Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D2" to="." method="_on_Area2D2_body_exited"]
[connection signal="body_entered" from="Node2D/Area2D3" to="." method="_on_Area2D3_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D3" to="." method="_on_Area2D3_body_exited"]
[connection signal="body_entered" from="Node2D/Area2D4" to="." method="_on_Area2D4_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D4" to="." method="_on_Area2D4_body_exited"]
[connection signal="body_entered" from="Node2D/Area2D5" to="." method="_on_Area2D5_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D5" to="." method="_on_Area2D5_body_exited"]
[connection signal="body_entered" from="Node2D/Area2D6" to="." method="_on_Area2D6_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D6" to="." method="_on_Area2D6_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
[connection signal="timeout" from="Timerr" to="." method="_on_Timerr_timeout"]
